# assay

./: Cargo.toml  DUMMIE.md  README.md  TEST.md  make_tampered_gpt2.py
src/: cli.rs  format.rs  hash.rs  main.rs  mapio.rs  numeric.rs  phase2.rs  progress.rs  report.rs  scan.rs  signature.rs  style.rs  values.rs
src/compare/: mod.rs
src/dequant/: mod.rs
src/fingerprint/: mod.rs
src/formats/: gguf.rs  mod.rs  pickle.rs  safetensors.rs
src/profile/: mod.rs  render.rs
src/secrets/: mod.rs
src/stats/: mod.rs  moments.rs
tests/: integration.rs
