[package]
name = "assay"
version = "0.1.0"
edition = "2021"
description = "Offline-first, single-binary scanner for ML model artifacts (safetensors / GGUF / PyTorch pickle)."
license = "Apache-2.0"
repository = "https://github.com/Sn0wAlice/assay"
readme = "README.md"
keywords = ["safetensors", "gguf", "pickle", "security", "supply-chain"]
categories = ["command-line-utilities"]

[[bin]]
name = "assay"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
byteorder = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
ed25519-dalek = "2"
hex = "0.4"
thiserror = "1"
anyhow = "1"
memmap2 = "0.9"

[profile.release]
opt-level = 3
lto = true
strip = true
